--- a/1RM Calculator/index.html
+++ b/1RM Calculator/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-group">
         <h3>One Rep Max Calculator</h1>
-        <p>Calculate your one-rep max (1RM) for any exercise.<br>Enter a weight of which you can perform 4-6 repitions</p>
+        <p>Calculate your one-rep max (1RM) for any exercise.<br>Enter a weight of which you can perform 4-6 repetitions</p>
         <label id="weight" for="weight">Weight: </label>
             <input
                 type="number"
